tests/valid/definite/BoolAssign_Valid_2.whiley
void System::main([string] args):
    bool x = true
    bool y = false
    print str(x)
    print str(y)
    print "AND"
    x = x && y
    print str(x)
    print "NOT"
    print str(!x)
